--- a/index.html
+++ b/index.html
@@ -2,28 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Open Weather MAP API</title>
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/styles.css">
+	<title>Hkm</title>
 </head>
 <body>
-	<div class="input-city">
-		<input type="text" id="city" placeholder="Type city in here">
-		<button type="submit" id="btn">Search</button>
-	</div>
-
-	<div class="weather-container">
-		<h1 class="title">Weather in </h1>
-		<img src="" alt="" class="icon">
-		<p class="weather"></p>
-		<p class="temp"></p>
-	</div>
-
-	<footer>
-		<p>Made by Hakim, 2018</p>
-	</footer>
-
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/main.js"></script>
+	<h1>index.html</h1>
+	<a href="test-page.html">Test page</a>
 </body>
 </html>
