--- a/test-page/index.html
+++ b/test-page/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Hkm | Test page</title>
+</head>
+<body>
+	<h1>This is test page</h1>
+	<a href="../index.html">&larr; Back</a>
+</body>
+</html>
