--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<h1>index.html</h1>
-	<a href="test-page.html">Test page</a>
+	<a href="test-page">Test page</a>
 </body>
 </html>
